--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = \"sk-or-v1-d0de4e0800c609c2444a1b9f50bbd9e72854522abc8835ccdbe502e80355627982\"\n",
+    "API_KEY = api_key,
     "\n",
     "MODEL = \"deepseek/deepseek-r1-distill-llama-70b:free\""
    ]
