--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = api_key,
+    "API_KEY = \api_key,
     "\n",
     "MODEL = \"deepseek/deepseek-r1-distill-llama-70b:free\""
    ]
