--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Task 1: Extracting and Counting Distinct Semantic Entities (ADR, Drug, Disease, Symptom)\r\n",
     "\r\n",
-    "In this task, our goal is to identify all the **unique medical entities** mentioned in the dataset — such as **Adverse Drug Reactions (ADR)**, **Drugs**, **Diseases**, and **Symptoms** — and then group similar expressions together using semantic clusterin\n",
+    "In this task, our goal is to identify all the **unique medical entity** mentioned in the dataset — such as **Adverse Drug Reactions (ADR)**, **Drugs**, **Diseases**, and **Symptoms** — and then group similar expressions together using semantic clusterin\n",
     "\n",
     "g.\r\n"
    ]
